# hanabi-agents

./: .env.example  .gitignore  README.md  pyproject.toml  refactor_analysis.md  todo.md
docs/: agent_memory_and_conversation.md  agent_memory_flow.md  original_action_proposal_prompt.txt
examples/: game_demo.py  play_game_with_ai_agents.py  play_simple_game.py  run_game.py  test_agent_tools.py  test_logging.py
hanabi_agents/agents/: __init__.py  ai_agent.py  base.py
hanabi_agents/agents/discussion/: __init__.py  discussion_manager.py
hanabi_agents/agents/prompts/: __init__.py  action_proposal.py  state_analysis.py  strategy_guidelines.py  thought_generation.py
hanabi_agents/agents/reasoning/: __init__.py  graph.py  nodes.py  router.py  schemas.py
hanabi_agents/agents/state/: __init__.py  agent_state.py  state_factory.py
hanabi_agents/agents/tools/: discard.py  error_handler.py  give_clue.py  play_card.py
hanabi_agents/game/: engine.py  state.py
hanabi_agents/utils/: game_logger.py  logging.py
old/: README.md  hanabi_agents_analysis.md
old/docs/: PRD.md  README.md
old/examples/: check_env.py  run_game.py
old/src/agents/: base.py
old/src/agents/actions/: __init__.py  parser.py  validator.py
old/src/agents/discussion/: __init__.py
old/src/agents/formatters/: __init__.py  discussion.py
old/src/agents/prompts/: __init__.py  action_proposal.py  thought_generation.py
old/src/agents/reasoning/: __init__.py
old/src/agents/tools/: __init__.py  play_card.py
old/src/game/: engine.py
old/src/utils/: env.py
reports/: hanabi_game_testing_report.md
src/agents/: __init__.py  ai_agent.py  base.py
src/agents/actions/: extractor.py
src/agents/discussion/: contribution.py
src/agents/formatters/: game_state.py  thoughts.py
src/agents/prompts/: state_analysis.py
src/agents/reasoning/: graph.py  nodes.py  router.py
src/agents/state/: agent_state.py  state_factory.py
src/agents/tools/: discard.py  error_handler.py  give_clue.py
src/agents/utils/: __init__.py  discussion.py  memory_utils.py
src/communication/: discussion.py
src/game/: engine.py  state.py
tests/: test_game.py  test_game_logic.py  test_hanabi_game_integration.py  test_indexing.py
